--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ disnake = {git = "https://github.com/DisnakeDev/disnake", rev='master'}
 
 
 [tool.poetry.dev-dependencies]
-black = "^21.7b0"
+black = "^22.2"
 flake8 = "~=3.8"
 flake8-annotations = "~=2.3"
 flake8-bugbear = "~=20.1"
@@ -26,7 +26,7 @@ flake8-isort = "^4.0.0"
 flake8-string-format = "~=0.3"
 flake8-tidy-imports = "~=4.1"
 flake8-todo = "~=0.7"
-isort = "^5.9.2"
+isort = "^5.10.1"
 pre-commit = "~=2.1"
 taskipy = "~=1.7.0"
 python-dotenv = "~=0.17.1"
